--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ src/node_modules
 dev_env/node_modules
 example/node_modules
 example/modules/flowine/node_modules
+example2/node_modules
 **/package-lock.json
 **/.DS_Store
