--- a/dev_env/Dockerfile
+++ b/dev_env/Dockerfile
@@ -1,23 +1,14 @@
-FROM ubuntu:latest
+FROM alpine:latest
 
-RUN apt-get -y update
-RUN apt-get install -y curl
-RUN apt-get install -y sudo
+# npm, nodejs
+RUN apk add --update npm
+# python3, pip, pip3
+RUN apk add py3-pip
 
-# download nodejs:
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
-# install nodejs:
-RUN sudo apt-get install -y nodejs
-RUN sudo apt-get install -y python3-pip
-# install opencv-python, skip questions:
-#RUN sudo DEBIAN_FRONTEND=noninteractive apt-get -yq install python3-opencv
+WORKDIR dev_env
 
-WORKDIR dev_env/dev_envexit
+EXPOSE 3000 8000
 
 COPY . /dev_env
 
-RUN pip3 install -r requirements.txt
-
-EXPOSE 8000
-
-#CMD ["npm", "start"]
+#ENTRYPOINT ["npm", "start"]
