--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 src/node_modules
 dev_env/node_modules
+dev_env/frontend/node_modules
+dev_env/backend/node_modules
 example/node_modules
 example/modules/flowine/node_modules
 example2/node_modules
