--- a/src/package.json
+++ b/src/package.json
@@ -14,10 +14,7 @@
   "peerDependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "python-shell": "^3.0.0",
-    "uuid": "^8.3.2",
-    "vm2": "^3.9.3"
+    "uuid": "^8.3.2"
   }
 }
